; ModuleID = '/home/carl/AnghaBench/micropython/lib/timeutils/extr_timeutils.c_timeutils_days_in_month.c'
source_filename = "/home/carl/AnghaBench/micropython/lib/timeutils/extr_timeutils.c_timeutils_days_in_month.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@days_since_jan1 = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @timeutils_days_in_month(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64*, i64** @days_since_jan1, align 8
  %7 = load i64, i64* %4, align 8
  %8 = getelementptr inbounds i64, i64* %6, i64 %7
  %9 = load i64, i64* %8, align 8
  %10 = load i64*, i64** @days_since_jan1, align 8
  %11 = load i64, i64* %4, align 8
  %12 = sub i64 %11, 1
  %13 = getelementptr inbounds i64, i64* %10, i64 %12
  %14 = load i64, i64* %13, align 8
  %15 = sub i64 %9, %14
  store i64 %15, i64* %5, align 8
  %16 = load i64, i64* %4, align 8
  %17 = icmp eq i64 %16, 2
  br i1 %17, label %18, label %25

18:                                               ; preds = %2
  %19 = load i64, i64* %3, align 8
  %20 = call i64 @timeutils_is_leap_year(i64 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %18
  %23 = load i64, i64* %5, align 8
  %24 = add i64 %23, 1
  store i64 %24, i64* %5, align 8
  br label %25

25:                                               ; preds = %22, %18, %2
  %26 = load i64, i64* %5, align 8
  ret i64 %26
}

declare dso_local i64 @timeutils_is_leap_year(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
